相机模块合并完成 还是有点小bug opencv部分有点内存泄露

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PapersResum</string>
+    <string name="picture">拍照</string>
+    <string name="comfirm">确认</string>
+    <string name="cancel">取消</string>
+    <string name="description_info">Info</string>
+    <string name="request_permission">需要申请相机和存储访问权限.</string>
+    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
 </resources>
